# relay-rs

./: .gitignore  API.md  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: docker.yml  rust.yml
migrations/: 20220104194552_initialize.sql
migrations/sqlite/: 20211229045056_initialize.sql
relay/: API.md  Cargo.toml  Makefile  README.md  docker-compose.yml
relay-backend-postgres/: Cargo.toml  README.md
relay-backend-postgres/migrations/: 1678464484380_initialize.sql  1695506628848_bytea.sql  20220104194552_initialize.sql  20220422191817_jobs2.sql
relay-backend-postgres/src/: lib.rs  migrations.rs  postgres.rs
relay-backing-dynamodb/: Cargo.toml
relay-backing-dynamodb/src/: lib.rs
relay-backing-postgres/: Cargo.toml
relay-backing-postgres/migrations/: 20220104194552_initialize.sql
relay-backing-postgres/src/: lib.rs
relay-backing-redis/: Cargo.toml
relay-backing-redis/src/: lib.rs
relay-backing-sqlite/: Cargo.toml
relay-backing-sqlite/migrations/: 20211229045056_initialize.sql
relay-backing-sqlite/src/: lib.rs
relay-bin/: .gitignore  Cargo.toml  README.md
relay-client/: Cargo.toml  docker-compose.yml
relay-client/src/: client.rs  jobs.rs  lib.rs
relay-core/: Cargo.toml  README.md
relay-core/src/: backend.rs  errors.rs  job.rs  lib.rs  worker.rs
relay-frontend-http/: API.md  Cargo.toml  README.md
relay-frontend-http/src/: http.rs  lib.rs  server.rs
relay-frontend-http/src/client/: client.rs  consumer.rs  errors.rs  mod.rs
relay-server-http/: Cargo.toml  README.md
relay-server-http/src/: lib.rs
relay/migrations/: 20220104194552_initialize.sql  V3__revert.sql
relay/src/: http.rs  jobs.rs  lib.rs  postgres.rs
relay/src/memory_store/: mod.rs
relay/src/memory_store/backing/: mod.rs  noop.rs
relay/src/postgres/: mod.rs  pool.rs  store.rs
scheduler/: API.md  Cargo.toml  README.md
scheduler/migrations/: 20211229045056_initialize.sql
scheduler/src/: http.rs  lib.rs  postgres.rs  scheduled.rs
scheduler/src/store/: backing.rs  mod.rs
schema/: multiple-databases.sh
src/: http.rs  jobs.rs  lib.rs  postgres.rs
src/store/: mod.rs
src/store/memory/: mod.rs
src/store/memory/backing/: dynamodb.rs  mod.rs  noop.rs  postgres.rs  redis.rs  sqlite.rs
src/store/server/: http.rs  mod.rs
