[workspace]

members = [
    "relay",
    "relay-core",
    "relay-frontend-http",
    "relay-backend-postgres",
]

[workspace.package]
edition = "2021"
authors = ["Dean Karn"]
description = "A no nonsense, horizontally scalable, ordered job runner backed by Postgres"

[workspace.dependencies]
clap = "4"
tokio = { version = "1.29.1", default-features =  false }
anyhow = "1.0.72"
thiserror = "1.0.44"
serde = { version = "1.0.180" }
serde_json = { version = "1.0.104" }
tracing = "0.1.37"
uuid = { version = "1.4.1" }
chrono = "0.4.26"
backoff-rs = "0.1.0"
reqwest = { version = "0.11.18" }
metrics = "0.21.1"
percent-encoding = "2.3.0"
async-channel = "1.9.0"
async-trait = "0.1.72"
anydate = "0.3.0"
metrics-util = "0.15.1"
log = "0.4.19"
relay-core = { version = "*", path="./relay-core" }

[profile.release]
lto = true
strip = true
codegen-units = 1
