[workspace]

members = [
    "relay",
    "relay-core",
    "relay-frontend-http",
    "relay-backend-postgres",
]

[workspace.package]
edition = "2021"
authors = ["Dean Karn"]
description = "A no nonsense, horizontally scalable, ordered job runner backed by Postgres"

[workspace.dependencies]
clap = "4"
tokio = { version = "1.33.0", default-features = false }
anyhow = "1.0.75"
thiserror = "1.0.50"
serde = { version = "1.0.192" }
serde_json = { version = "1.0.108" }
tracing = "0.1.40"
uuid = { version = "1.5.0" }
chrono = "0.4.31"
backoff-rs = "0.1.0"
reqwest = { version = "0.11.22" }
metrics = "0.24.1"
percent-encoding = "2.3.0"
async-channel = "1.9.0"
async-trait = "0.1.74"
anydate = "0.3.0"
metrics-util = "0.19.0"
log = "0.4.20"
relay-core = { version = "*", path = "./relay-core" }

[profile.release]
lto = true
strip = true
codegen-units = 1
