[package]
name = "relay-backend-postgres"
version = "0.14.4"
edition.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relay-core.workspace = true
tracing.workspace = true
metrics.workspace = true
chrono.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
async-trait.workspace = true
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
deadpool-postgres = "0.10.5"
pg_interval = "0.4.2"
anyhow.workspace = true
tokio-stream = "0.1.14"
tokio = { workspace = true, features = ["rt-multi-thread", "net", "time","macros"] }
tokio-postgres-rustls = "0.10.0"
rustls = { version = "0.21.8", default-features = false, features = ["tls12", "dangerous_configuration"] }
webpki-roots = "0.23.1"

[dev-dependencies]
uuid = { workspace = true, features = ["v4"] }

