[package]
name = "relay-backing-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.2"
async-trait = "0.1.52"
chrono = "0.4.19"
serde_json = { version = "1.0.75", features = ["raw_value"] }
tokio-stream = "0.1.8"
relay = { version = "*", path = "../relay" }
redis = { version = "0.21.5", features = ["r2d2", "aio", "tokio-comp", "connection-manager", "tokio-native-tls-comp"] }
