[package]
name = "relay-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.0.5", features = ["derive", "env"] }
tokio = { version = "1.15.0", features = ["rt-multi-thread", "net", "time","macros"] }
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
metrics-exporter-prometheus = { version = "0.7.0", optional = true }
metrics-util = "0.10.2"
relay = { version = "*", path = "../relay" }
relay-server-http = { version = "*", path = "../relay-server-http" }
relay-backing-dynamodb = { version = "*", path = "../relay-backing-dynamodb", optional = true }
relay-backing-postgres = { version = "*", path = "../relay-backing-postgres", optional = true }
relay-backing-redis = { version = "*", path = "../relay-backing-redis", optional = true }
relay-backing-sqlite = { version = "*", path = "../relay-backing-sqlite", optional = true }

[features]
default = []
backing-dynamodb = ["relay-backing-dynamodb"]
backing-postgres = ["relay-backing-postgres"]
backing-redis = ["relay-backing-redis"]
backing-sqlite = ["relay-backing-sqlite"]
metrics-prometheus = ["metrics-exporter-prometheus"]

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true