[package]
name = "relay-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }
anydate = { version = "0.3.0", features = ["serde"] }
tracing = "0.1.34"
thiserror = "1.0.31"
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls", "gzip", "json"] }

[dev-dependencies]
uuid = { version = "1.0.0", features = ["v4"] }
anyhow = "1.0.57"
tokio = { version = "1.18.1", features = ["rt-multi-thread", "net", "time","macros"] }