[package]
name = "relay-core"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.37"
serde = { version = "1.0.147", features = ["derive"] }
anydate = { version = "0.3.0", features = ["serde"] }
chrono = { version = "0.4.22", features = ["serde"] }
async-trait = "0.1.58"
