[package]
name = "relay-core"
version = "0.4.0"
edition.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
anydate = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
async-trait.workspace = true
