[package]
name = "relay-frontend-http"
version = "0.4.0"
edition.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.2.1", default-features = false, features = ["compress-gzip", "rustls"] }
relay-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time", "macros"] }
serde_json = { workspace = true, features = ["raw_value"] }
tracing.workspace = true
metrics.workspace = true
serde = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
backoff-rs.workspace = true
percent-encoding.workspace = true
async-channel.workspace = true

[dev-dependencies]
actix-http-test = "3.0.0"
actix-http = "3.2.2"
actix-service = "2.0.2"
relay-backend-postgres = { version = "*", path="../relay-backend-postgres"}
uuid = { workspace = true, features = ["v4"] }
chrono.workspace = true
