[package]
name = "relay-frontend-http"
version = "0.8.0"
edition.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relay-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time", "macros","signal"] }
serde_json = { workspace = true, features = ["raw_value"] }
tracing.workspace = true
metrics.workspace = true
serde = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
backoff-rs.workspace = true
percent-encoding.workspace = true
async-channel.workspace = true
axum = { version = "0.6.18", default-features = false, features = ["http1", "http2", "json","matched-path","original-uri","query","tokio","tower-log"] }
tower-http = { version = "0.4.0", features = ["trace"] }
uuid = { workspace = true, features = ["v4"] }


[dev-dependencies]
portpicker = "0.1.1"
relay-backend-postgres = { version = "*", path="../relay-backend-postgres"}
chrono.workspace = true
