[package]
name = "relay-server-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.20", default-features = false, features = ["compress-gzip", "rustls"] }
serde_json = { version = "1.0.75", features = ["raw_value"] }
tokio-stream = "0.1.8"
relay = { version = "*", path = "../relay" }
tracing = "0.1.29"
tokio = { version = "1.15.0", features = ["macros"] }
serde = "1.0.133"
metrics = "0.18.0"
anyhow = "1.0.52"
