[package]
name = "relay"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive", "env"] }
tokio = { version = "1.18.2", features = ["rt-multi-thread", "net", "time","macros"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
metrics-exporter-prometheus = { version = "0.9.0", optional = true }
metrics-util = "0.12.1"
metrics = "0.18.1"
serde_json = { version = "1.0.81", features = ["raw_value"] }
tracing = "0.1.34"
relay-core = { version = "0.1", path="../relay-core" }
relay-frontend-http = { version = "0.1", path = "../relay-frontend-http", optional = true}
relay-backend-postgres = { version = "0.1", path = "../relay-backend-postgres", optional = true}

[features]
default = ["frontend-http","backend-postgres"]
metrics-prometheus = ["metrics-exporter-prometheus"]
frontend-http = ["relay-frontend-http"]
backend-postgres = ["relay-backend-postgres"]

