[package]
name = "relay"
version = "0.13.0"
edition.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relay-core.workspace = true
relay-frontend-http = { version = "*", path = "../relay-frontend-http", optional = true}
relay-backend-postgres = { version = "*", path = "../relay-backend-postgres", optional = true}
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["smallvec", "fmt", "env-filter", "tracing-log", "std"] }
metrics-exporter-prometheus = { version = "0.12.0", optional = true }
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "time","macros"] }
metrics-util.workspace = true
metrics.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
tracing.workspace = true
tracing-appender = "0.2.2"


[features]
default = ["frontend-http", "backend-postgres"]
metrics-prometheus = ["metrics-exporter-prometheus"]
frontend-http = ["relay-frontend-http"]
backend-postgres = ["relay-backend-postgres"]

