[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
clap = { version = "3.0.14", features = ["derive", "env"] }
tokio = { version = "1.16.1", features = ["rt-multi-thread", "net", "time","macros"] }
tracing-subscriber = { version = "0.3.8", features = ["env-filter"] }
metrics-exporter-prometheus = { version = "0.8.0", optional = true }
metrics-util = "0.11.0"
metrics = "0.18.0"
relay = { version = "*", path="../relay" }
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["raw_value"] }
thiserror = "1.0.30"
tokio-stream = "0.1.8"
log = "0.4.14"
tracing = "0.1.30"
sqlx = { version = "0.5.10", features = ["postgres", "chrono","runtime-tokio-rustls", "all-types", "migrate"] }
actix-web = { version = "4.0.0-rc.3", default-features = false, features = ["compress-gzip", "rustls"] }
url = { version = "2.2.2", features = ["serde"] }
async-stream = "0.3.2"
async-trait = "0.1.52"
cron = "0.9.0"
ahash = "0.7.6"
reqwest = { version = "0.11.9", default-features = false, features = ["rustls-tls","gzip", "json"] }

[features]
default = []
metrics-prometheus = ["metrics-exporter-prometheus"]
