[package]
name = "scheduler"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.11", features = ["derive", "env"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "net", "time","macros"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
metrics-exporter-prometheus = { version = "0.9.0", optional = true }
metrics-util = "0.12.0"
metrics = "0.18.1"
relay = { version = "*", path="../relay" }
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["raw_value"] }
thiserror = "1.0.30"
tokio-stream = "0.1.8"
log = "0.4.16"
tracing = "0.1.34"
sqlx = { version = "0.5.13", features = ["postgres", "chrono","runtime-tokio-rustls", "all-types", "migrate"] }
actix-web = { version = "4.0.1", default-features = false, features = ["compress-gzip", "rustls"] }
url = { version = "2.2.2", features = ["serde"] }
async-stream = "0.3.3"
async-trait = "0.1.53"
cron = "0.11.0"
ahash = "0.7.6"
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls","gzip", "json"] }

[features]
default = []
metrics-prometheus = ["metrics-exporter-prometheus"]
